--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.13",
     "axios": "^0.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.7",
